# cmake-the-right-way

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmaketherightwayConfig.cmake.in
include/simple/: simple.hpp
src/: simple.cpp
